tests/__snapshots__/validation-fixtureFileMatch-wrong-list-item-type-stderr.snap.txt
Error: Item of the 'fixtureFileMatch' list must be of type string.

  2 |   "fixtureFileMatch": [
  3 |     "fixtures/*",
  4 |     false,
    |     ~~~~~
  5 |     "**/__fixtures__/*.ts"
  6 |   ]
  7 | }

      at ./tstyche.json:4:5

